# my-coding-settings

./: README.md  merge_directories.sh
.devcontainer/: devcontainer.json
docker/: .env
general/: CLAUDE.md
general/.ai/commands/: memory-bank.md
general/.claude/commands/: marp.md  review.md  search.md
general/.claude/templates/: slide-design-template.md  slide-guidelines.md
general/.gemini/commands/: marp.toml  memory-bank.toml  review.toml  search.toml
general/docker/: Dockerfile
global/: CLAUDE.md
global/.cursor/rules/: design-template.mdc  marp.mdc  memory-bank.mdc  search.mdc
global/.gemini/: setting.json
python/: CLAUDE.md  pyproject.toml
python/.cursor/rules/: python-uv.mdc
python/docker/: compose.yml
spec/.claude/commands/: design-phase.md  implementation-phase.md  implementation-plan-phase.md  requirements-phase.md  spec-driven-development.md
spec/.claude/templates/: api-spec-template.md  database-spec-template.md  design-template.md  implementation-plan-template.md  requirements-template.md  test-plan-template.md
spec/.gemini/commands/: design-phase.toml  implementation-phase.toml  implementation-plan-phase.toml  requirements-phase.toml  spec-driven-development.toml
swift/: CLAUDE.md
swift/.cursor/rules/: swift.mdc
tdd/: CLAUDE.md
tdd/.cursor/rules/: tdd.mdc
